Archive2/7f/57c0defef804da/output
+ g++-4.8 -std=c++03 -Wall -Wextra -pedantic -Wno-unused-variable main.cpp
In file included from main.cpp:4:0:
main.cpp: In instantiation of 'T bar(int) [with T = std::basic_string<char>]':
main.cpp:18:24:   required from here
main.cpp:10:3: error: invalid application of 'sizeof' to incomplete type 'boost::STATIC_ASSERTION_FAILURE<false>'
   BOOST_STATIC_ASSERT_MSG((!boost::is_same<T, std::string>::value), 
   ^
